input: ets_fps_mmi: Add navigation support.
Add vertical direction navigation.
This is needed if screen in landscape mode

Change-Id: I68e4fd262575e0f4741a9d3f3beaad99a9ee163c
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1248736
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key
Reviewed-on: https://gerrit.mot.com/1339668
Reviewed-on: https://gerrit.mot.com/1362792

--- a/drivers/input/misc/ets_fps_mmi/Kbuild
+++ b/drivers/input/misc/ets_fps_mmi/Kbuild
@@ -13,6 +13,9 @@ ifneq ($(filter m y,$(CONFIG_INPUT_EGISTEC_FPS_NAVI)),)
 	EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_NAVI
 	ets_fps_mmi-y += ets_navi_input.o
 endif
+ifneq ($(filter m y,$(CONFIG_INPUT_EGISTEC_FPS_NAVI_VERTICAL)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_NAVI_VERTICAL
+endif
 
 obj-m += ets_fps_mmi.o
 
