--- a/drivers/input/misc/ets_fps_mmi/Kbuild
+++ b/drivers/input/misc/ets_fps_mmi/Kbuild
@@ -16,6 +16,9 @@ endif
 ifneq ($(filter m y,$(CONFIG_INPUT_EGISTEC_FPS_NAVI_VERTICAL)),)
 	EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_NAVI_VERTICAL
 endif
+ifeq ($(TARGET_BUILD_VARIANT),userdebug)
+	EXTRA_CFLAGS += -DFP_SPI_DEBUG
+endif
 
 obj-m += ets_fps_mmi.o
 
