Fix navigation function build issue
Only enable FPS_NAVI function if CONFIG_INPUT_EGISTEC_FPS_NAVI defined.
if not defined, do not build ets_navi_input.c

Change-Id: Ibd57c719cb33ad7254cb77272e4ac5ee7b8b664a
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1339496
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key
Reviewed-on: https://gerrit.mot.com/1362790

--- a/drivers/input/misc/ets_fps_mmi/Kbuild
+++ b/drivers/input/misc/ets_fps_mmi/Kbuild
@@ -7,7 +7,12 @@ ifneq ($(filter m y,$(CONFIG_INPUT_EGISTEC_FPS_NAVI_HORIZON)),)
 	EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_NAVI_HORIZON
 endif
 
-ets_fps_mmi-y += ets_fps.o ets_navi_input.o
+ets_fps_mmi-y += ets_fps.o
+
+ifneq ($(filter m y,$(CONFIG_INPUT_EGISTEC_FPS_NAVI)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_NAVI
+	ets_fps_mmi-y += ets_navi_input.o
+endif
 
 obj-m += ets_fps_mmi.o
 
