--- a/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
@@ -16,4 +16,8 @@ focaltech_0flash_mmi-objs += focaltech_point_report_check.o
 focaltech_0flash_mmi-objs += focaltech_spi.o
 focaltech_0flash_mmi-objs += focaltech_test/focaltech_test.o
 focaltech_0flash_mmi-objs += focaltech_test/focaltech_test_ini.o
-focaltech_0flash_mmi-objs += focaltech_test/supported_ic/focaltech_test_ft8719.o
+
+ifneq ($(filter ft8719,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME_FT8719
+	focaltech_0flash_mmi-objs += focaltech_test/supported_ic/focaltech_test_ft8719.o
+endif
