fpc1020: Enable fpc class device only for multi fp.
Enable class fingerprint only when multi fingerprint sensor enabled.
Do not change if only has one fingerprint sensor.

Change-Id: I90c85ba3399241d7652f164603cf7f571ab98118
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1356399
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key
Tested-by: Jira Key

--- a/drivers/input/misc/fpc_fps_mmi/Kbuild
+++ b/drivers/input/misc/fpc_fps_mmi/Kbuild
@@ -2,6 +2,10 @@
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
 
+ifneq ($(filter m y,$(CONFIG_INPUT_MISC_FPC1020_SAVE_TO_CLASS_DEVICE)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_MISC_FPC1020_SAVE_TO_CLASS_DEVICE
+endif
+
 fpc1020_mmi-y += fpc1020_tee.o
 
 obj-m += fpc1020_mmi.o
