sound/codecs:add ti2558 driver
sofiar use smart pa ti2558,
add kernel drivers.

Change-Id: I02b490c17e96224d2fd9510d3e214900a4172b4a
Reviewed-on: https://gerrit.mot.com/1396120
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Yuesheng Huang <huangys@motorola.com>
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kbuild
+++ b/sound/soc/codecs/Kbuild
@@ -19,6 +19,11 @@ ifneq (,$(filter channel%, $(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_TAS2560_REGMAP -DCONFIG_TAS2560_CODEC -DCONFIG_TAS2560_MISC -DCONFIG_SND_SOC_TAS2560
 endif
 
+ifneq (,$(filter sofiar%, $(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_TAS2562_REGMAP -DCONFIG_TAS2562_CODEC -DCONFIG_SND_SOC_TAS2562 -DTAS2558_CODEC
+endif
+
+
 ifeq ($(KDIR),)
 PLMA_HOSTSW_DIR=$(realpath -f $(srctree)/$(src))
 else
@@ -49,3 +54,6 @@ obj-m += tas2560_algo.o
 
 tas2560_calib-objs = tas2560-calib.o
 obj-m += tas2560_calib.o
+
+tas2562-objs = tas2562-codec.o tas2562-regmap.o
+obj-m += tas2562.o
