focaltech_0flash_mmi: add support for ft8009
Difference between ft8756 and ft8009 is only CHIP_TYPE_MAPPING,
so use ft8756 configs firstly.

Change-Id: I79f3e04bf0a31c4a94091bd8f8525b2dd87af1d7
Signed-off-by: wangyq13 <wangyq13@mt.com>
Reviewed-on: https://gerrit.mot.com/1399541
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wei Deng <dengwei1@motorola.com>
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
@@ -28,3 +28,9 @@ ifneq ($(filter ft8756,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME)),)
 	focaltech_0flash_mmi-objs += focaltech_flash_ft8756.o
 	focaltech_0flash_mmi-objs += focaltech_spi_v1_1_1.o
 endif
+ifneq ($(filter ft8009,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME_FT8009
+	focaltech_0flash_mmi-objs += focaltech_test/supported_ic/focaltech_test_ft8756.o
+	focaltech_0flash_mmi-objs += focaltech_flash_ft8756.o
+	focaltech_0flash_mmi-objs += focaltech_spi_v1_1_1.o
+endif
