ASoC: tsa2558 customization for Rav
Rav uses single tas2558, TDM RX time slot need to set as stereo
downmix (L+R)/2.
Verify reset2 gpio before use it, otherwise, kernel log will
print error.

Change-Id: I9481301195b2f365c36d62cff86ea499e22673ca
Signed-off-by: zhouwl <zhouwl@lenovo.com>
Reviewed-on: https://gerrit.mot.com/1400626
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kbuild
+++ b/sound/soc/codecs/Kbuild
@@ -23,6 +23,9 @@ ifneq (,$(filter sofiar%, $(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_TAS2562_REGMAP -DCONFIG_TAS2562_CODEC -DCONFIG_SND_SOC_TAS2562 -DTAS2558_CODEC
 endif
 
+ifneq (,$(filter rav%, $(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_TAS2562_REGMAP -DCONFIG_TAS2562_CODEC -DCONFIG_SND_SOC_TAS2562 -DTAS2558_CODEC
+endif
 
 ifeq ($(KDIR),)
 PLMA_HOSTSW_DIR=$(realpath -f $(srctree)/$(src))
