nova_0flash_mmi: Add double tap function
TP:
If double tap option is enabled, create a virtual sensor for moto app.

Change-Id: I283c4754e9cc1cf3692a63ab46c6a93e8bee1a9f
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1401685
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/nova_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/nova_0flash_mmi/Kbuild
@@ -6,6 +6,9 @@ EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include \
 ifeq ($(filter m y, $(CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI)),)
 	obj-m := nova_0flash_mmi.o
 endif
+ifneq ($(filter m y,$(CONFIG_INPUT_NOVA_0FLASH_MMI_ENABLE_DOUBLE_TAP)),)
+	EXTRA_CFLAGS += -DNVT_SENSOR_EN
+endif
 
 nova_0flash_mmi-objs += nt36xxx.o
 nova_0flash_mmi-objs += nt36xxx_ext_proc.o
