focaltech_0flash_mmi: Add double tap function
TP:
If double tap option is enabled, create a virtual sensor for moto app.

Change-Id: I7e1f5119a3979419b58775f653622859341975e5
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1401525
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
@@ -34,3 +34,6 @@ ifneq ($(filter ft8009,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME)),)
 	focaltech_0flash_mmi-objs += focaltech_flash_ft8756.o
 	focaltech_0flash_mmi-objs += focaltech_spi_v1_1_1.o
 endif
+ifneq ($(filter m y,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_ENABLE_DOUBLE_TAP)),)
+	EXTRA_CFLAGS += -DFOCALTECH_SENSOR_EN
+endif
