focaltech_0flash_mmi: Add palm detection function
TP:
If palm detection option is enabled
Create a virtual sensor for moto app.


Change-Id: Iad3962083f3a4a3abf89b91082f8513a1c04d6c2
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1405384
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
@@ -37,3 +37,6 @@ endif
 ifneq ($(filter m y,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_ENABLE_DOUBLE_TAP)),)
 	EXTRA_CFLAGS += -DFOCALTECH_SENSOR_EN
 endif
+ifneq ($(filter m y,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_ENABLE_PALM)),)
+	EXTRA_CFLAGS += -DFOCALTECH_PALM_SENSOR_EN
+endif
