--- a/drivers/input/touchscreen/himax_v2_mmi/Kbuild
+++ b/drivers/input/touchscreen/himax_v2_mmi/Kbuild
@@ -16,6 +16,10 @@ ifneq ($(filter hx83102,$(CONFIG_INPUT_HIMAX_V2_MMI_IC_NAME)),)
 	EXTRA_CFLAGS += -D__HIMAX_HX83102_MOD__
 endif
 
+ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_ENABLE_PALM)),)
+	EXTRA_CFLAGS += -DHIMAX_PALM_SENSOR_EN
+endif
+
 obj-m := himax_v2_mmi.o
 
 ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_0FLASH)),)
