--- a/drivers/input/touchscreen/himax_v2_mmi/support_ic/himax_v2_mmi_hx83112/Kbuild
+++ b/drivers/input/touchscreen/himax_v2_mmi/support_ic/himax_v2_mmi_hx83112/Kbuild
@@ -14,5 +14,9 @@ ifneq ($(filter hx83112,$(CONFIG_INPUT_HIMAX_V2_MMI_IC_NAME)),)
 	EXTRA_CFLAGS += -D__HIMAX_HX83112_MOD__
 endif
 
+ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_ENABLE_PALM)),)
+	EXTRA_CFLAGS += -DHIMAX_PALM_SENSOR_EN
+endif
+
 obj-m := himax_v2_mmi_hx83112.o
 himax_v2_mmi_hx83112-objs += himax_ic_HX83112.o
