cci_intf: Update driver for 4.19 kernel
Update the cci_intf driver used for sending CCI commands from
the shell to the Linux 4.19 kernel

Change-Id: I5de934badc2ad2b25cb7148e9abbc95492ba48d5
Signed-off-by: Ravi Vembu <Raviv@motorola.com>
Mot-CRs-Fixed: (CR)
Reviewed-on: https://gerrit.mot.com/1411444
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: <timwang@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
+++ b/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
@@ -1,4 +1,8 @@
-KERNEL_SOURCE_PATH ?= kernel/msm-4.9
+ifeq ($(TARGET_KERNEL_VERSION),$(filter $(TARGET_KERNEL_VERSION),4.19))
+        KERNEL_SOURCE_PATH ?= kernel/msm-4.19
+else
+        KERNEL_SOURCE_PATH ?= kernel/msm-4.9
+endif
 
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
