cci_intf: Kbuild: Fix kernel version check
Change-Id: Ifb4abc6b2d1609546ebeef2c7498d5aa22bf5341
Signed-off-by: Ravi Vembu <raviv@motorola.com>
Mot-CRs-Fixed: (CR)
Reviewed-on: https://gerrit.mot.com/1411653
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Submit-Approved: Jira Key

--- a/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
+++ b/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
@@ -1,4 +1,6 @@
-ifeq ($(TARGET_KERNEL_VERSION),$(filter $(TARGET_KERNEL_VERSION),4.19))
+HAVE_KERNEL_419 = $(shell test -d $(TOP)/kernel/msm-4.19 && echo 1)
+
+ifeq ($(HAVE_KERNEL_419),1)
         KERNEL_SOURCE_PATH ?= kernel/msm-4.19
 else
         KERNEL_SOURCE_PATH ?= kernel/msm-4.9
