Egis/driver: Check authentication status before do display
motorola/kernel/modules/drivers/input/misc/ets_fps_mmi: Add ioctl
command SET_AUTH_STATUS (0xD1), and check the authentication status
before call ext_dsi_display_early_power_on().

In the interrupt handle process of Egis driver, authentication status
should be checked before call ext_dsi_display_early_power_on().

Change-Id: I0cebb9b183f792c9bc308ec913740a26a4b1113e
Reviewed-on: https://gerrit.mot.com/1412387
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/misc/ets_fps_mmi/Kbuild
+++ b/drivers/input/misc/ets_fps_mmi/Kbuild
@@ -28,3 +28,6 @@ else
 EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_POSE=270
 endif
 
+ifneq ($(filter m y, $(CONFIG_DISPLAY_SPEED_UP)),)
+EXTRA_CFLAGS += -DCONFIG_DISPLAY_SPEED_UP
+endif
