camera: cam_cci: Update camera driver path
Details refer to commit in kernel:
1fbb537 msm: camera: Remove camera codebase from kernel project

Change-Id: Ib00a269a319960cb185efc4565d805c212666ab2
Reviewed-on: https://gerrit.mot.com/1418794
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Submit-Approved: Jira Key
Tested-by: Jira Key
Reviewed-by: Ravikumar Vembu <Raviv@motorola.com>

--- a/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
+++ b/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
@@ -6,14 +6,24 @@ else
         KERNEL_SOURCE_PATH ?= kernel/msm-4.9
 endif
 
+HAVE_TECHPACK_CAMERA = $(shell test -d $(TOP)/$(KERNEL_SOURCE_PATH)/techpack/camera && echo 1)
+
+ifeq ($(HAVE_TECHPACK_CAMERA),1)
+        KERNEL_CAMERA_DRIVER_PATH ?= $(TOP)/$(KERNEL_SOURCE_PATH)/techpack/camera/drivers
+        EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/../include
+        EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/../include/uapi
+else
+        KERNEL_CAMERA_DRIVER_PATH ?= $(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera
+endif
+
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_utils
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_cpas/include
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_sensor_module/cam_sensor_io
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_sensor_module/cam_sensor_utils
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_req_mgr
-EXTRA_CFLAGS += -I$(TOP)/$(KERNEL_SOURCE_PATH)/drivers/media/platform/msm/camera/cam_smmu
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_utils
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_cpas/include
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_sensor_module/cam_sensor_io
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_sensor_module/cam_sensor_utils
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_sensor_module/cam_cci
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_req_mgr
+EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/cam_smmu
 
 obj-m	+= cci_intf.o
