--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -10,6 +10,10 @@ ifneq (,$(filter doha%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
 endif
 
+ifneq (,$(filter sofia%,$(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
+endif
+
 ifneq (,$(filter odin%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL \
 		-DCONFIG_CAPSENSE_ATTACH_CAL
