--- a/drivers/input/misc/ets_fps_mmi/Kbuild
+++ b/drivers/input/misc/ets_fps_mmi/Kbuild
@@ -22,3 +22,6 @@ endif
 
 obj-m += ets_fps_mmi.o
 
+ifneq ($(filter m y, $(CONFIG_DISPLAY_SPEED_UP)),)
+EXTRA_CFLAGS += -DCONFIG_DISPLAY_SPEED_UP
+endif
