--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -24,6 +24,10 @@ EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL \
 		-DCONFIG_CAPSENSE_FLIP_CAL
 endif
 
+ifneq (,$(filter rav%,$(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
+endif
+
 KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../../sensors/Module.symvers
 
 sx932x_sar-y := sx933x_sar.o
