--- a/drivers/input/misc/ets_fps_mmi/Kbuild
+++ b/drivers/input/misc/ets_fps_mmi/Kbuild
@@ -28,6 +28,13 @@ else
 EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_POSE=270
 endif
 
+ifneq ($(filter sofia%, $(TARGET_PRODUCT)),)
+EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_POSE=0
+endif
+ifneq ($(filter rav%, $(TARGET_PRODUCT)),)
+EXTRA_CFLAGS += -DCONFIG_INPUT_EGISTEC_FPS_POSE=0
+endif
+
 ifneq ($(filter m y, $(CONFIG_DISPLAY_SPEED_UP)),)
 EXTRA_CFLAGS += -DCONFIG_DISPLAY_SPEED_UP
 endif
