goodix_gtx8_v1430_mmi: Add update firmware code
TP:
Add update firmware code

Change-Id: I2837a2b80dfaf11d265756eb07872fb9e9ce7721
Signed-off-by: haojl2 <haojl2@motorola.com>
Reviewed-on: https://gerrit.mot.com/1426318
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Tao Sun <suntao2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/goodix_gtx8_v1430_mmi/Kbuild
+++ b/drivers/input/touchscreen/goodix_gtx8_v1430_mmi/Kbuild
@@ -7,3 +7,6 @@ EXTRA_CFLAGS += \
 obj-m := goodix_v1430_mmi.o
 goodix_v1430_mmi-objs = goodix_ts_i2c.o goodix_ts_core.o goodix_cfg_bin.o
 
+obj-m += goodix_v1430_update_mmi.o
+goodix_v1430_update_mmi-objs = goodix_gtx8_update.o
+
