Fix cci_intf kernel module for 8250
CONFIG_SPECTRA_CAMERA has to be defined so that the
correct cci subdev is returned by cam_cci_get_subdev.

Change-Id: I98e4c8653fe50d88db58026509122261ce78fa9c
Reviewed-on: https://gerrit.mot.com/1428309
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Ravikumar Vembu <raviv@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
+++ b/drivers/media/platform/msm/camera/cam_sensor_module/cam_cci/Kbuild
@@ -10,6 +10,7 @@ HAVE_TECHPACK_CAMERA = $(shell test -d $(TOP)/$(KERNEL_SOURCE_PATH)/techpack/cam
 
 ifeq ($(HAVE_TECHPACK_CAMERA),1)
         KERNEL_CAMERA_DRIVER_PATH ?= $(TOP)/$(KERNEL_SOURCE_PATH)/techpack/camera/drivers
+        EXTRA_CFLAGS += -DCONFIG_SPECTRA_CAMERA=1
         EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/../include
         EXTRA_CFLAGS += -I$(KERNEL_CAMERA_DRIVER_PATH)/../include/uapi
 else
