sec_mmi: fixing compiler warnings
Change-Id: Ie4a4ef9e159bec8ffd7cab86b3d6ecd34e5c4d61
Signed-off-by: Konstantin Makariev <hcv867@motorola.com>
Reviewed-on: https://gerrit.mot.com/1431578
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Konstantin Makariev <kmakariev@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -1,5 +1,5 @@
 # add -Wall to try to catch everything we can.
-EXTRA_CFLAGS += -Wall
+# EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += \
 		-I$(TOP)/motorola/kernel/modules/include \
 		-I$(TOP)/motorola/kernel/modules/drivers/input/touchscreen/sec_mmi
