--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -28,6 +28,10 @@ ifneq (,$(filter rav%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
 endif
 
+ifneq (,$(filter burton%,$(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
+endif
+
 KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../../sensors/Module.symvers
 
 sx932x_sar-y := sx933x_sar.o
