--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -1,3 +1,7 @@
+KERNEL_DIR_PATH = $(shell find $(TOP)/kernel/ -name "msm-*" | head -1)
+
+KERNEL_VERSION_NAME = $(shell basename $(KERNEL_DIR_PATH))
+
 # add -Wall to try to catch everything we can.
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
@@ -32,6 +36,7 @@ ifneq (,$(filter burton%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
 endif
 
+EXTRA_CFLAGS += -I$(TOP)/kernel/$(KERNEL_VERSION_NAME)/drivers/base
 KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../../sensors/Module.symvers
 
 sx932x_sar-y := sx933x_sar.o
