--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -1,4 +1,4 @@
-KERNEL_DIR_PATH = $(shell find $(TOP)/kernel/ -name "msm-*" | head -1)
+KERNEL_DIR_PATH = $(shell find $(TOP)/kernel/ -name "msm-*" | head -1 | grep -i "kernel/msm-*")
 
 KERNEL_VERSION_NAME = $(shell basename $(KERNEL_DIR_PATH))
 
@@ -36,7 +36,11 @@ ifneq (,$(filter burton%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
 endif
 
-EXTRA_CFLAGS += -I$(TOP)/kernel/$(KERNEL_VERSION_NAME)/drivers/base
+ifneq (,$(KERNEL_DIR_PATH))
+        EXTRA_CFLAGS += -I$(TOP)/kernel/$(KERNEL_VERSION_NAME)/drivers/base
+else
+        EXTRA_CFLAGS += -I$(TOP)/kernel/drivers/base
+endif
 KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../../sensors/Module.symvers
 
 sx932x_sar-y := sx933x_sar.o
