input: himax_v2_mmi: Add single tap feature
himax_v2_mmi:
Add single tap feature.

Change-Id: Ie7b761d848aad027dcae67307c0f281f168168d8
Signed-off-by: wangyq13 <wangyq13@lenovo.com>
Reviewed-on: https://gerrit.mot.com/1436894
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jialei Hao <haojl2@motorola.com>
Reviewed-by: Jun Weng <wengjun1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/himax_v2_mmi/Kbuild
+++ b/drivers/input/touchscreen/himax_v2_mmi/Kbuild
@@ -20,6 +20,10 @@ ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_ENABLE_PALM)),)
 	EXTRA_CFLAGS += -DHIMAX_PALM_SENSOR_EN
 endif
 
+ifneq ($(filter m y,$(CONFIG_INPUT_HIMAX_V2_MMI_ENABLE_DOUBLE_TAP)),)
+	EXTRA_CFLAGS += -DHIMAX_V2_SENSOR_EN
+endif
+
 obj-m := himax_v2_mmi.o
 
 ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_0FLASH)),)
