--- a/drivers/input/misc/vl53L1/Kbuild
+++ b/drivers/input/misc/vl53L1/Kbuild
@@ -12,9 +12,11 @@ ifdef OLD_NETLINK_API
 EXTRA_CFLAGS	+= -DOLD_NETLINK_API
 endif
 
-ifdef VL53L1_LOG_ENABLE
+# ifdef VL53L1_LOG_ENABLE
+# EXTRA_CFLAGS	+= -DVL53L1_LOG_ENABLE
+# endif
+
 EXTRA_CFLAGS	+= -DVL53L1_LOG_ENABLE
-endif
 
 obj-m	+= stmvl53l1.o
 stmvl53l1-objs		:= stmvl53l1_module.o stmvl53l1_module-i2c.o
@@ -29,3 +31,7 @@ stmvl53l1-objs		+= src/vl53l1_zone_presets.o src/vl53l1_nvm.o
 stmvl53l1-objs		+= src/vl53l1_api_debug.o src/vl53l1_core_support.o
 stmvl53l1-objs		+= src/vl53l1_wait.o ipp/ipp_linux.o
 stmvl53l1-objs		+= src/vl53l1_nvm_debug.o
+
+ifneq ($(filter m y,$(CONFIG_INPUT_MISC_TOF_USE_VL53L3)),)
+	EXTRA_CFLAGS += -DTOF_USE_VL53L3_EN
+endif
