--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -4,5 +4,10 @@ EXTRA_CFLAGS += \
 		-I$(TOP)/motorola/kernel/modules/include \
 		-I$(TOP)/motorola/kernel/modules/drivers/input/touchscreen/sec_mmi
 
+ifneq (,$(filter smith%,$(TARGET_PRODUCT)))
+# MMI_STOPSHIP LSI: remove when all DLKM available
+EXTRA_CFLAGS += -DUSE_STUBS
+endif
+
 obj-m := sec_mmi.o
 sec_mmi-objs = sec_ts.o sec_ts_fn.o sec_ts_fw.o sec_ts_mmi.o sec_cmd.o sec_ts_only_vendor.o
