Sofiap: touch: Pen status notification to touch
- Because now we are using stylus on sofiap and this will keep
touch always on high sensitive mode which will easy to lead to
the problem such as ghost touch , residue points etc. So we add
a pen notifier to touch and then the firmware of the touch can adjust
the mode according to the status of the pen.

Change-Id: Idb333c38a2af08d8d9a7038b9a8c87f80bDefendered7
Signed-off-by: wengjun1 <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/1441556
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jianqiu Huang <huangjq9@motorola.com>
Reviewed-by: Yeqing Wang <wangyq13@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/focaltech_0flash_mmi/Kbuild
@@ -40,3 +40,7 @@ endif
 ifneq ($(filter m y,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_ENABLE_PALM)),)
 	EXTRA_CFLAGS += -DFOCALTECH_PALM_SENSOR_EN
 endif
+ifneq ($(filter m y,$(CONFIG_INPUT_FOCALTECH_0FLASH_MMI_PEN_NOTIFIER)),)
+	KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../../../misc/pen/Module.symvers
+	EXTRA_CFLAGS += -DFOCALTECH_PEN_NOTIFIER
+endif
