GinNA: AW88258 Codec bringup
Now GinNA will use awinic smartpa AW88258.
This change is for AW88258 Codec bringup

Change-Id: I00da3116d0a5c9721fe1f8e4d039ab543c89e4f4
Signed-off-by: guoyf2 <guoyf2@lenovo.com>
Reviewed-on: https://gerrit.mot.com/1446399
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wen Xie <xiewen3@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kbuild
+++ b/sound/soc/codecs/Kbuild
@@ -20,7 +20,8 @@ EXTRA_CFLAGS += -DCONFIG_TAS2560_REGMAP -DCONFIG_TAS2560_CODEC -DCONFIG_TAS2560_
 endif
 
 ifneq (,$(filter ginna%, $(TARGET_PRODUCT)))
-EXTRA_CFLAGS += -DCONFIG_TAS2562_REGMAP -DCONFIG_TAS2562_CODEC -DCONFIG_SND_SOC_TAS2562 -DTAS2558_CODEC -DCONFIG_TAS25XX_ALGO -DCONFIG_TAS25XX_CALIB
+EXTRA_CFLAGS += -DCONFIG_AW882XX_CODEC
+#-DCONFIG_AW882XX_DSP
 endif
 
 ifeq ($(KDIR),)
@@ -56,3 +57,6 @@ obj-m += tas2560_calib.o
 
 tas2562-objs = tas2562-codec.o tas2562-regmap.o tas25xx-algo.o tas25xx-calib.o
 obj-m += tas2562.o
+
+snd_smartpa_aw882xx-objs = aw882xx.o
+obj-m += snd_smartpa_aw882xx.o
