--- a/drivers/input/touchscreen/himax_v2_mmi/Kbuild
+++ b/drivers/input/touchscreen/himax_v2_mmi/Kbuild
@@ -24,6 +24,10 @@ ifneq ($(filter m y,$(CONFIG_INPUT_HIMAX_V2_MMI_ENABLE_DOUBLE_TAP)),)
 	EXTRA_CFLAGS += -DHIMAX_V2_SENSOR_EN
 endif
 
+ifneq ($(filter m y,$(CONFIG_INPUT_HIMAX_V2_MMI_ENABLE_MULTI_BIN)),)
+	EXTRA_CFLAGS += -DHIMAX_V2_MULTI_BIN
+endif
+
 obj-m := himax_v2_mmi.o
 
 ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_0FLASH)),)
