audio: add aw88258 speaker protection
GinNA aw88258 speaker protection bringup
-add algo build flag for Ginna
-add speaker protection related code

Change-Id: I316d0296fabe392a1a3a9257a79259ca56d986bc
Signed-off-by: guoyf2 <guoyf2@mt.com>
Reviewed-on: https://gerrit.mot.com/1448918
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wen Xie <xiewen3@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kbuild
+++ b/sound/soc/codecs/Kbuild
@@ -20,8 +20,7 @@ EXTRA_CFLAGS += -DCONFIG_TAS2560_REGMAP -DCONFIG_TAS2560_CODEC -DCONFIG_TAS2560_
 endif
 
 ifneq (,$(filter ginna%, $(TARGET_PRODUCT)))
-EXTRA_CFLAGS += -DCONFIG_AW882XX_CODEC
-#-DCONFIG_AW882XX_DSP
+EXTRA_CFLAGS += -DCONFIG_AW882XX_CODEC -DCONFIG_AW882XX_DSP
 endif
 
 ifeq ($(KDIR),)
