Add racerl to Target product
TP:
Add racerl to Target product to finish
bring-up of sec_mmi touch screen

Change-Id: Ib2e4cce43916f278263f19fcb69fd8389182fd01
Reviewed-on: https://gerrit.mot.com/1450086
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Konstantin Makariev <kmakariev@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -4,7 +4,7 @@ EXTRA_CFLAGS += \
 		-I$(TOP)/motorola/kernel/modules/include \
 		-I$(TOP)/motorola/kernel/modules/drivers/input/touchscreen/sec_mmi
 
-ifneq (,$(filter smith%,$(TARGET_PRODUCT)))
+ifneq (,$(filter smith% racer%,$(TARGET_PRODUCT)))
 # MMI_STOPSHIP LSI: remove when all DLKM available
 EXTRA_CFLAGS += -DUSE_STUBS
 endif
