--- a/drivers/power/p938x_charger/Kbuild
+++ b/drivers/power/p938x_charger/Kbuild
@@ -2,4 +2,8 @@
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
 
+ifeq ($(TARGET_BUILD_VARIANT),userdebug)
+    EXTRA_CFLAGS += -DP938X_USER_DEBUG
+endif
+
 obj-m += p938x_charger.o
