Popup: Support only have hardware clk product.
1. Use product macro CONFIG_LIBER_DTB to support only have hardware clk;
2. Use clock-names to distinguish clocks of different products.

Change-Id: Ie30700fab869c15bfaf98c34894e4bd7ee2335f1
Signed-off-by: Wen Xie <xiewen3@motorola.com>
Reviewed-on: https://gerrit.mot.com/1456059
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jichao Zou <zoujc@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/popup/aw8646/Kbuild
+++ b/drivers/popup/aw8646/Kbuild
@@ -2,4 +2,8 @@
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
 
+ifeq ($(CONFIG_LIBER_DTB), y)
+EXTRA_CFLAGS += -DCONFIG_USE_HW_CLK
+endif
+
 obj-m += aw8646.o
