audio/codec:Add AW882XX SmarPA Driver
Porting aw882xx driver to bq-sh2019;
Liberty will use aw88288 as audio PA.

Change-Id: I234c7be2fb2991947175a05be387f2837f159aa1
Signed-off-by: yaozm1 <yaozm1@mt.com>
Reviewed-on: https://gerrit.mot.com/1457370
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: Yunfei Guo <guoyf2@motorola.com>
Submit-Approved: Jira Key

--- a/sound/soc/codecs/Kbuild
+++ b/sound/soc/codecs/Kbuild
@@ -20,6 +20,10 @@ ifneq (,$(filter channel%, $(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_TAS2560_REGMAP -DCONFIG_TAS2560_CODEC -DCONFIG_TAS2560_MISC -DCONFIG_SND_SOC_TAS2560
 endif
 
+ifneq (,$(filter liber%, $(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_AW882XX_CODEC
+endif
+
 ifeq ($(KDIR),)
 PLMA_HOSTSW_DIR=$(realpath -f $(srctree)/$(src))
 else
@@ -81,3 +85,6 @@ obj-m += tas2560_algo.o
 
 tas2560_calib-objs = tas2560-calib.o
 obj-m += tas2560_calib.o
+
+snd_smartpa_aw882xx-objs = aw882xx.o
+obj-m += snd_smartpa_aw882xx.o
