--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -4,8 +4,7 @@ EXTRA_CFLAGS += \
 		-I$(TOP)/motorola/kernel/modules/include \
 		-I$(TOP)/motorola/kernel/modules/drivers/input/touchscreen/sec_mmi
 
-ifneq (,$(filter smith% racer% burton%,$(TARGET_PRODUCT)))
-# MMI_STOPSHIP LSI: remove when all DLKM available
+ifneq (,$(filter racer% burton%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DUSE_STUBS
 endif
 
