sec_mmi: make dynamic refresh rate optional
Among the current products only Racer Turbo and Racer support dynamic
refresh rate capability. This feature needs to become optional
in LSI driver.

Change-Id: I669fef68fbd65f9227ceae4d3adb80091b60394a
Signed-off-by: Konstantin Makariev <hcv867@motorola.com>
Reviewed-on: https://gerrit.mot.com/1465946
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Ryan Lattrel <ryanl@motorola.com>
Reviewed-by: Konstantin Makariev <kmakariev@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -5,7 +5,9 @@ EXTRA_CFLAGS += \
 		-I$(TOP)/motorola/kernel/modules/drivers/input/touchscreen/sec_mmi
 
 ifneq (,$(filter racer% burton%,$(TARGET_PRODUCT)))
-EXTRA_CFLAGS += -DUSE_STUBS
+# NOTE: USE_STUBS option will go away when touchscreen_mmi class introduced, but
+#       CONFIG_DRM_DYNAMIC_REFRESH_RATE is staying!!!
+EXTRA_CFLAGS += -DUSE_STUBS -DCONFIG_DRM_DYNAMIC_REFRESH_RATE
 endif
 
 obj-m := sec_mmi.o
