--- a/sound/soc/codecs/Kbuild
+++ b/sound/soc/codecs/Kbuild
@@ -21,7 +21,7 @@ EXTRA_CFLAGS += -DCONFIG_TAS2560_REGMAP -DCONFIG_TAS2560_CODEC -DCONFIG_TAS2560_
 endif
 
 ifneq (,$(filter liber%, $(TARGET_PRODUCT)))
-EXTRA_CFLAGS += -DCONFIG_AW882XX_CODEC
+EXTRA_CFLAGS += -DCONFIG_AW882XX_CODEC -DCONFIG_AW882XX_DSP
 endif
 
 ifeq ($(KDIR),)
