drivers: sx933x: add usb recal for cap sense
Add build config option to recalibrate cap sense upon
insertion of USB.

Change-Id: Ib774aa418d66cd769b5d1149d61b30619b9b4ed7
Signed-off-by: awhite6 <awhite6@motorola.com>
Reviewed-on: https://gerrit.mot.com/1467066
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Ling Jin <lingjin@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -36,6 +36,10 @@ ifneq (,$(filter burton%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
 endif
 
+ifneq (,$(filter smith%,$(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
+endif
+
 ifneq (,$(KERNEL_DIR_PATH))
         EXTRA_CFLAGS += -I$(TOP)/kernel/$(KERNEL_VERSION_NAME)/drivers/base
 else
