--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -10,5 +10,9 @@ ifneq (,$(filter racer% burton%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DUSE_STUBS -DCONFIG_DRM_DYNAMIC_REFRESH_RATE
 endif
 
+ifneq (,$(filter burton%,$(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_PANEL_NOTIFICATIONS
+endif
+
 obj-m := sec_mmi.o
 sec_mmi-objs = sec_ts.o sec_ts_fn.o sec_ts_fw.o sec_ts_mmi.o sec_cmd.o sec_ts_only_vendor.o
