--- a/drivers/input/touchscreen/sec_mmi/Kbuild
+++ b/drivers/input/touchscreen/sec_mmi/Kbuild
@@ -15,4 +15,11 @@ EXTRA_CFLAGS += -DCONFIG_PANEL_NOTIFICATIONS
 endif
 
 obj-m := sec_mmi.o
-sec_mmi-objs = sec_ts.o sec_ts_fn.o sec_ts_fw.o sec_ts_mmi.o sec_cmd.o sec_ts_only_vendor.o
+sec_mmi-objs = sec_ts.o sec_ts_fn.o sec_ts_fw.o sec_cmd.o sec_ts_only_vendor.o
+
+ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_MMI)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_TOUCHSCREEN_MMI
+	sec_mmi-objs += sec_ts_mmi_class.o
+else
+	sec_mmi-objs += sec_ts_mmi.o
+endif
