--- a/drivers/misc/sx933x/Kbuild
+++ b/drivers/misc/sx933x/Kbuild
@@ -40,6 +40,10 @@ ifneq (,$(filter smith%,$(TARGET_PRODUCT)))
 EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
 endif
 
+ifneq (,$(filter racer%,$(TARGET_PRODUCT)))
+EXTRA_CFLAGS += -DCONFIG_CAPSENSE_USB_CAL
+endif
+
 ifneq (,$(KERNEL_DIR_PATH))
         EXTRA_CFLAGS += -I$(TOP)/kernel/$(KERNEL_VERSION_NAME)/drivers/base
 else
