Register touchscreen class of synaptics
TP:
Access to synaptics touch through touchscreen unified interface

Change-Id: I353932ea46510a9f1d7357872238d073d1740ecc
Reviewed-on: https://gerrit.mot.com/1475154
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jialei Hao <haojl2@motorola.com>
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/synaptics_tcm_mmi_v2/Kbuild
+++ b/drivers/input/touchscreen/synaptics_tcm_mmi_v2/Kbuild
@@ -14,3 +14,7 @@ obj-m += synaptics_testing.o
 obj-m += synaptics_zeroflash.o
 
 synaptics_core_module-objs := synaptics_core.o synaptics_touch.o
+ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_MMI)),)
+	EXTRA_CFLAGS += -DCONFIG_INPUT_TOUCHSCREEN_MMI
+	synaptics_core_module-objs += synaptics_ts_mmi.o
+endif
