input: himax_v2_mmi: add hx83102d driver
input/himax_v2_mmi:
Add HX83102D driver. HX83102D is different from others, so need
to add CODE_OVERLAY and its own drivers.

The first TP is hx83102D without flash

Change-Id: I68df2f1cc365041367de75ef8b52cecf677c70d0
Reviewed-on: https://gerrit.mot.com/1478452
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/himax_v2_mmi/Kbuild
+++ b/drivers/input/touchscreen/himax_v2_mmi/Kbuild
@@ -16,6 +16,11 @@ ifneq ($(filter hx83102,$(CONFIG_INPUT_HIMAX_V2_MMI_IC_NAME)),)
 	EXTRA_CFLAGS += -D__HIMAX_HX83102_MOD__
 endif
 
+ifneq ($(filter hx83102d,$(CONFIG_INPUT_HIMAX_V2_MMI_IC_NAME_D)),)
+	EXTRA_CFLAGS += -D__HIMAX_HX83102D_MOD__
+	EXTRA_CFLAGS += -DHX_CODE_OVERLAY
+endif
+
 ifneq ($(filter m y,$(CONFIG_INPUT_TOUCHSCREEN_HIMAX_V2_MMI_ENABLE_PALM)),)
 	EXTRA_CFLAGS += -DHIMAX_PALM_SENSOR_EN
 endif
