DLKM: Nairobi NT36672c touch bringup
- Add BOARD_USES_PANEL_NOTIFICATIONS for enable panel
notifications feature to fit for new display notifier callchain.

Change-Id: I16c7fef774d0b76d4a4d23ad39673f85bfff582b
Signed-off-by: wengjun1 <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/1481808
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/nova_0flash_mmi/Kbuild
+++ b/drivers/input/touchscreen/nova_0flash_mmi/Kbuild
@@ -9,6 +9,9 @@ endif
 ifneq ($(filter m y,$(CONFIG_INPUT_NOVA_0FLASH_MMI_ENABLE_DOUBLE_TAP)),)
 	EXTRA_CFLAGS += -DNVT_SENSOR_EN
 endif
+ifneq ($(filter m y,$(CONFIG_INPUT_NOVA_PANEL_NOTIFICATIONS)),)
+EXTRA_CFLAGS += -DNVT_CONFIG_PANEL_NOTIFICATIONS
+endif
 
 nova_0flash_mmi-objs += nt36xxx.o
 nova_0flash_mmi-objs += nt36xxx_ext_proc.o
